# ipcdemo

./: .gitignore
src/namedpipe/: CMakeLists.txt  process1.cpp  process2.cpp  process3.cpp
src/namedpipe-cs/: Program.cs  namedpipe-cs.csproj  namedpipe-cs.sln
